fixed spacing and wording

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -3174,7 +3174,7 @@
 	#banner {
 		background-attachment: scroll,							fixed;
 		background-color: #666;
-		background-image: url("images/overlay.png"), url("../images/banner1.jpg");
+		background-image: url("images/overlay.png"), url("../images/banner2.jpg");
 		background-position: top left,						center center;
 		background-repeat: repeat,							no-repeat;
 		background-size: auto,							cover;
